[tool.poetry]
name = "pingoo"
version = "0.1.0"
description = ""
authors = ["KU-onji <mgr_127@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
slack-bolt = "^1.21.3"
slack-sdk = "^3.33.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
